# autosieve

./: .coverage  .gitignore  CHANGELOG.md  MIGRATION.md  README.md  alias.json.old  autosieve.template.toml  mailfilter.template.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: advanced-features.md  architecture.md  developer.md  security.md
samples/: generated.sample.sieve  sieve_alias_mapping.sample.json
src/autosieve/: __init__.py  cli.py  config.py  imap_alias.py  managesieve.py  server_config.py  sieve.py
src/autosieve/commands/: __init__.py  backup.py  restore.py  sync.py
src/autosieve/features/: __init__.py  custom_filters.py  notify.py  oauth2.py  vacation.py
src/mailfilter/: __init__.py  cli.py  config.py  imap_alias.py  managesieve.py  server_config.py  sieve.py
tests/: conftest.py  test_backup_restore.py  test_cli.py  test_config.py  test_features.py  test_imap_alias.py  test_managesieve.py  test_server_config.py  test_sieve.py  test_sync.py
