[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autosieve"
version = "0.2.0"
description = "Multi-target Sieve script generation, IMAP alias extraction, ManageSieve upload, vacation/notify, custom filters and backups."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["keyring>=25.0"]

[project.optional-dependencies]
oauth2 = ["requests>=2.31"]

[project.scripts]
autosieve = "autosieve.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autosieve"]

[dependency-groups]
dev = [
    "pdoc>=15",
    "poethepoet>=0.29",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.11",
]

[tool.poe.tasks]
format = "ruff format src/ tests/"
check-format = "ruff format --check src/ tests/"
lint = "ruff check src/ tests/"
test = "pytest"
typecheck = "mypy src/"
coverage = "pytest --cov=autosieve --cov-report=term-missing tests/"
doc = "pdoc --output-dir docs/api autosieve"
check = ["lint", "check-format", "typecheck", "test"]

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "RUF",  # ruff-specific
    "D1",   # pydocstyle: missing docstrings
]
ignore = [
    "T201",  # print() used in CLI output
    "S110",  # try-except-pass OK for cleanup (logout, socket close)
    "D107",  # Missing docstring in __init__ — dataclasses auto-generate __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "D"]  # assert, hardcoded passwords, and docstrings OK in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
